@@ -1,3 +1,5 @@
+Sun 06 Mar 2022 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
+	* Add DOCTYPE support
+
 Sat 14 Aug 2021 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
 	* Initial commit ;)
-
